--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
         }
     }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -88,17 +92,13 @@ android {
 }
 
 ext {
-    supportLibraryVersion = '27.1.1'
+    supportLibraryVersion = '28.0.0'
     workVersion = "1.0.0-alpha09"
 }
 
 
 configurations.all {
     exclude group: 'com.google.firebase', module: 'firebase-core'
-    resolutionStrategy {
-        force "com.android.support:cardview-v7:${supportLibraryVersion}"
-        force "com.android.support:preference-v7:${supportLibraryVersion}"
-    }
 }
 
 dependencies {
@@ -114,7 +114,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
@@ -157,9 +157,6 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:9.0.0-SNAPSHOT'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-SNAPSHOT'
-
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.3'
 
