--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 63
-        versionName "3.0.1"
+        versionCode 64
+        versionName "3.1.0beta1"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
