--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ android {
 
 ext {
     supportLibraryVersion = '28.0.0'
-    workVersion = "1.0.0-alpha09"
+    workVersion = "1.0.0-alpha10"
 }
 
 
@@ -155,8 +155,8 @@ dependencies {
     compileOnly "org.projectlombok:lombok:1.18.2"
     annotationProcessor "org.projectlombok:lombok:1.18.2"
 
-    implementation 'com.jakewharton:butterknife:9.0.0-SNAPSHOT'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-SNAPSHOT'
+    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
 
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.3'
 
