--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 69
-        versionName "3.1.0beta6"
+        versionCode 70
+        versionName "3.1.0"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
