--- a/app/build.gradle
+++ b/app/build.gradle
@@ -199,6 +199,7 @@ dependencies {
 
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
+    implementation group: 'eu.medsea.mimeutil', name: 'mime-util', version: '2.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
