--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,10 +107,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.emoji:emoji-bundled:1.0.0'
     implementation 'org.michaelevans.colorart:library:0.0.3'
-    implementation "android.arch.work:work-runtime:${workVersion}"
+    implementation "android.arch.work:work-runtime:1.0.0-beta01"
     implementation "android.arch.work:work-firebase:${workVersion}"
     androidTestImplementation "android.arch.work:work-testing:${workVersion}"
 
@@ -158,7 +158,7 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:1.18.4"
 
     implementation 'com.jakewharton:butterknife:9.0.0-rc2'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
 
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.3'
 
