--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 78
-        versionName "3.2.0beta5"
+        versionCode 79
+        versionName "3.2.0"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
