--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,7 +120,7 @@ dependencies {
     implementation "android.arch.work:work-rxjava2:${workVersion}"
     androidTestImplementation "android.arch.work:work-testing:${workVersion}"
 
-
+    implementation 'androidx.biometric:biometric:1.0.0-alpha03'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
     implementation 'androidx.multidex:multidex:2.0.0'
