--- a/app/build.gradle
+++ b/app/build.gradle
@@ -206,7 +206,13 @@ dependencies {
     implementation 'com.kevalpatel2106:emoticongifkeyboard:1.1'
 
     implementation group: 'eu.medsea.mimeutil', name: 'mime-util', version: '2.1.3'
+
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.26.0'
+    testImplementation 'org.powermock:powermock-core:2.0.0'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.0'
+
     androidTestImplementation ('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
