--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ android {
 }
 
 ext {
-    workVersion = "1.0.0"
+    workVersion = "1.0.1"
 }
 
 
@@ -119,6 +119,7 @@ dependencies {
     implementation 'org.michaelevans.colorart:library:0.0.3'
     implementation "android.arch.work:work-runtime:${workVersion}"
     implementation "android.arch.work:work-rxjava2:${workVersion}"
+    implementation 'com.google.android:flexbox:1.1.0'
     androidTestImplementation "android.arch.work:work-testing:${workVersion}"
 
     implementation 'androidx.biometric:biometric:1.0.0-alpha04'
@@ -137,6 +138,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.13.1'
 
     implementation 'com.bluelinelabs:logansquare:1.3.7'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
     annotationProcessor 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
