--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 92
-        versionName "6.0.0beta4"
+        versionCode 93
+        versionName "6.0.0"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
@@ -121,8 +121,7 @@ android {
 }
 
 ext {
-    supportLibraryVersion = '28.0.0'
-    workVersion = "1.0.0"
+    workVersion = "1.0.1"
 }
 
 
@@ -169,11 +168,12 @@ dependencies {
 
     implementation 'com.bluelinelabs:logansquare:1.3.7'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
-    annotationProcessor 'com.bluelinelabs:logansquare-compiler:1.3.7'
+    kapt 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
+
     implementation 'com.google.dagger:dagger:2.21'
     kapt 'com.google.dagger:dagger-compiler:2.21'
     implementation 'com.github.lukaspili.autodagger2:autodagger2:1.1'
@@ -183,7 +183,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'io.requery:requery:1.5.1'
     implementation 'io.requery:requery-android:1.5.1'
-    implementation 'net.zetetic:android-database-sqlcipher:4.0.1'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.9'
     kapt 'io.requery:requery-processor:1.5.1'
     implementation 'org.parceler:parceler-api:1.1.12'
     kapt 'org.parceler:parceler:1.1.12'
