--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 99
-        versionName "6.0.6-internal"
+        versionCode 101
+        versionName "6.0.6internal"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
