--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 101
-        versionName "6.0.7beta"
+        versionCode 102
+        versionName "6.1.0"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
