--- a/app/build.gradle
+++ b/app/build.gradle
@@ -216,6 +216,8 @@ dependencies {
 
     implementation 'com.github.natario1:Autocomplete:v1.1.0'
 
+    implementation 'com.github.cotechde.hwsecurity:hwsecurity-fido:2.4.1'
+
     implementation 'com.novoda:merlin:1.2.1'
 
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.1'
